--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -255,6 +255,14 @@
                           {{ datoEmbarque.piezas }}
                          </span>
                     </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Unidades Físicas
+                        </span>
+                        <span class="m-list-settings__item-control">
+                          {{ datoEmbarque.unidades ? datoEmbarque.unidades : 0 }}
+                         </span>
+                    </div>
 					 <div class="m-list-settings__item">
                         <span class="m-list-settings__item-label">
                             Categoría o partida arancelaria
