--- a/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
@@ -2,13 +2,17 @@
 <table class="table table-bordered table-responsive m-table m-table--head-bg-brand">
     <thead>
     <tr>
-        <th>Fecha</th>
-        <th>Articulo/WR</th>
+        <th>Fecha En Bodega</th>
+        <th>Código Almacén</th>
         <th>Tracking</th>
         <th>Descripción</th>
         <th>Remitente</th>
         <th>Peso(Lb)</th>
+        <th>Piezas</th>
+        <th>Dim(In)</th>
+        <th>Vol(Vlb)</th>
         <th>Valor(USD)</th>
+        <th>Estatus</th>
         <th>Detalles</th>
     </tr>
     </thead>
@@ -29,6 +33,7 @@
         <td>
             <span *ngIf="articulo.media == 0">{{articulo.descripcion}}</span>
             <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media > 0" (click)="onVerImagenes(articulo.id)">{{articulo.descripcion}}</span>
+            <span *ngIf="articulo.extranombre">({{articulo.extranombre}} {{articulo.extraapellidos}})</span>
         </td>
         <td>
             {{articulo.tienda}}
@@ -37,7 +42,19 @@
             {{articulo.peso}}
         </td>
         <td>
+            {{articulo.piezas}}
+        </td>
+        <td>
+            {{articulo.largo +'X'+ articulo.ancho +'X'+ articulo.alto}}
+        </td>
+        <td>
+            {{articulo.volumen ? articulo.volumen : '0.00' }}
+        </td>
+        <td>
             {{articulo.precio}}
+        </td>
+        <td>
+            {{articulo.estado ? articulo.estado : '-' }}
         </td>
         <td>
             <i class="fa fa-eye m--font-info" title="Ver" style="cursor: pointer;" (click)="onVer(articulo, articuloDetallesModal)"></i>
@@ -81,10 +98,11 @@
         <table class="table table-bordered table-responsive m-table m-table--head-bg-brand">
             <thead>
             <tr>
-                <th>Embarcado</th>
-                <th>Enviado</th>
-                <th>#Guia</th>
-                <th>Empresa</th>
+                <th>Guía Envío</th>
+                <th>Recibo</th>
+                <th>Forma de Entrega</th>
+                <th>Guía de Entrega</th>
+                <th>Fecha de Entrega</th>
             </tr>
             </thead>
             <tbody>
@@ -93,13 +111,16 @@
                     {{item.fechaEnvio | date: "dd/MM/y"}}
                 </td>
                 <td>
-                    {{item.fechaGuia | date: "dd/MM/y"}}
+                    {{item.recibo}}
                 </td>
                 <td>
-                    {{item.guia}}
+                    {{ item.nombre ? item.nombre : '-' }}
                 </td>
                 <td>
-                    {{item.nombre}}
+                    {{ item.guia ? item.guia : '-'}}
+                </td>
+                <td>
+                    {{item.fechaGuia ? (item.fechaGuia | date: "dd/MM/y") : '-'}}
                 </td>
             </tr>
             </tbody>
