--- a/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
@@ -1,8 +1,8 @@
 <table class="table table-bordered table-responsive m-table m-table--head-bg-brand">
     <thead>
     <tr>
-        <th>Embarcado</th>
-        <th>Facturado</th>
+        <th>Fecha Recibo</th>
+        <th>Recibo</th>
         <th>Cargo</th>
         <th>Formas de Pago</th>
         <th>Detalles</th>
@@ -14,10 +14,10 @@
     </tr>
     <tr *ngFor="let articulo of data">
         <td>
-            {{articulo.fechaIngreso | date: "dd/MM/y"}}
+            {{articulo.fechaNotificacion | date: "dd/MM/y"}}
         </td>
         <td>
-            {{articulo.fechaNotificacion | date: "dd/MM/y"}}
+            {{articulo.recibo }}
         </td>
         <td>
             {{articulo.costo}}
@@ -100,6 +100,7 @@
                 <td>
                     <span *ngIf="articulo.media == 0">{{articulo.descripcion}}</span>
                     <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media > 0" (click)="onVerImagenes(articulo.id)">{{articulo.descripcion}}</span>
+                    <span *ngIf="articulo.extranombre">({{articulo.extranombre}} {{articulo.extraapellidos}})</span>
                 </td>
                 <td>
                     {{articulo.tienda}}
@@ -110,6 +111,11 @@
                 <td>
                     {{articulo.precio}}
                 </td>
+            </tr>
+            <tr>
+                <td colspan="4" class="text-center" style="font-weight: bold;"> TOTAL </td>
+                <td>{{ totalPeso }}</td>
+                <td>{{ totalPrecio }}</td>
             </tr>
             </tbody>
         </table>
