--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -71,19 +71,26 @@
             (click)="guardarPrecio(articulo.id,articulo.precio)"  *ngIf="!articulo.editarprecio"></i>
         </td>
         <td>
-            <span class="m-badge m-badge--info m-badge--wide" title="Declaración de Valores" style="color: white; background-color: #4f9e35"  *ngIf="articulo.factura_file && articulo.facDV && !articulo.consolidadoFactura">Si</span>
-            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file | replice" title="Factura" style="color: white; background-color: #1e1111" target="_blank" *ngIf="articulo.factura_file && !articulo.facDV && !articulo.consolidadoFactura">Si</a>
+            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file" title="Declaración de Valores" style="color: white; background-color: #4f9e35"  *ngIf="articulo.factura_file && articulo.facDV && !articulo.consolidadoFactura">Si</a>            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file | replice" title="Factura" style="color: white; background-color: #1e1111" target="_blank" *ngIf="articulo.factura_file && !articulo.facDV && !articulo.consolidadoFactura">Si</a>
             <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file | replice" title="Factura Consolidada" style="color: white; background-color: #4660d1" target="_blank" *ngIf="articulo.factura_file && !articulo.facDV && articulo.consolidadoFactura">Si</a>            
-            <span  class="m-badge m-badge--info m-badge--wide" title="Factura Consolidada" style="color: white; background-color: #4660d1"  *ngIf="articulo.factura_file && articulo.facDV && articulo.consolidadoFactura">Si</span>   
-            <input
+            <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file" title="Factura Consolidada" style="color: white; background-color: #4660d1" *ngIf="articulo.factura_file && articulo.facDV && articulo.consolidadoFactura">Si</a>                  <input
                     name="archivo"
                     type="file"
                     hidden
                     #fileInput
                     (change)="onSubirFactura($event, articulo)"
             >
+            <input
+            name="archivo"
+            type="file"
+            hidden
+            #fileInputMasiva
+            (change)="onSubirFacturaMasiva($event, articulo)">
             <i class="fa fa-folder-open m--font-success" style="cursor: pointer" title="Subir Factura" (click)="fileInput.click()" *ngIf="!articulo.factura_file"></i>
             <span *ngIf="articulo.facturaExcel">{{articulo.facturaExcel.name}}</span>
+            <i class="fa fa-file-pdf-o m--font-success" style="cursor: pointer; margin-left: 5px;" title="Declaración de valores" (click)="declaracionValores(declaracion,articulo.id,articulo)"></i>
+            <i class="fa fa-edit m--font-success" style="cursor: pointer" title="Editar Factura" (click)="fileInput.click()" *ngIf="articulo.factura_file"></i>
+            <i class="fa fa-copy m--font-success" style="cursor: pointer" title="Editar Factura Masiva" (click)="fileInputMasiva.click()" *ngIf="articulo.factura_file && articulo.consolidadoFactura "></i>
         </td>
         <td>
            
@@ -138,3 +145,233 @@
 </ng-template>
 <!--end::Modal-->  <!--begin::Modal-->
 
+<ng-template #declaracion let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title">Declaración de valores</h4>
+        <button type="button" class="close" aria-label="Close" (click)="close()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="m-portlet__head-caption">
+            <div class="m-list-settings">
+                <form class="m-form m-form--fit m-form--label-align-right m-form--group-seperator-dashed"
+                      #declaracionForm="ngForm" (submit)="onSubmit(declaracionForm.value)">
+                    <div class="m-portlet__body">
+                     
+                        <div class="form-group m-form__group row">
+                            <label class="col-lg-3 col-form-label">
+                                Fecha de Expiración*:
+                            </label>
+                            <div class="input-group col-lg-3">
+                                <input class="form-control" placeholder="yyyy-mm-dd"
+                                    name="fecha_expiracion" #fecha_expiracion="ngModel" [(ngModel)]="articulodv.fecha_expiracion_d_v"
+                                    ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()" required>
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-secondary" 
+                                        style="color: #575962; background-color: white; line-height: initial; margin-left: -1px;"
+                                        (click)="d.toggle()" type="button">
+                                        <i class="fa fa-calendar" style="width: 1.2rem; height: 1rem; cursor: pointer;"></i>
+                                    </button>
+                                </div>
+                                
+                            </div>
+                            <label class="col-lg-2 col-form-label">
+                                AWB*:
+                            </label>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control m-input" *ngIf="articulodv.envio"
+                                       [(ngModel)]="articulodv.envio.warehouse" #awbs="ngModel"
+                                       name="awbs"
+                                       required disabled>
+                                <input type="text" class="form-control m-input m--hide" *ngIf="articulodv.envio"
+                                       [ngModel]="articulodv.envio.warehouse"  #awb="ngModel"
+                                       name="awb"
+                                       required>
+                                <input type="text" class="form-control m-input" *ngIf="!articulodv.consolidado && !articulodv.envio"
+                                       [(ngModel)]="articulodv.trackbox" #awbs="ngModel"
+                                       name="awbs"
+                                       required disabled>
+                                <input type="text" class="form-control m-input m--hide" *ngIf="!articulodv.consolidado && !articulodv.envio"
+                                       [ngModel]="articulodv.trackbox"  #awb="ngModel"
+                                       name="awb"
+                                       required>
+                                <input type="text" class="form-control m-input" *ngIf="articulodv.consolidado  && !articulodv.envio"
+                                       [(ngModel)]="articulodv.awb"  #awb="ngModel"
+                                       name="awb"
+                                       required>
+                            </div>
+                            </div>
+                             <div class="form-group m-form__group row">
+                            <label class="col-lg-3 col-form-label">
+                                Remitente:
+                            </label>
+                            <div class="col-lg-4">
+                                <input type="text" class="form-control m-input" placeholder="Tienda o Usuario NO REGISTRADO"
+                                [ngModel]="articulodv.tienda_d_v"  #remitente_text="ngModel"
+                                name="remitente_text"
+                                >
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="m-loader m-loader--primary m-loader--right" *ngIf="!usuarios">
+                                    <input type="text" class="form-control"/>
+                                </div>
+                                <app-auto-complete *ngIf="usuarios" placeholder="USUARIO REGISTRADO"
+                                                    [ngModel]="remitente_usuario" #remitente_id="ngModel"
+                                                    name="remitente_id"  [items]="usuarios"
+                                                    [textField]="'numero_identidad'"
+                                                    textField1="nombre"
+                                                    textField2="apellido"
+                                                    valueField="numero_identidad"
+                                                    [isModal] = "true"
+                                ></app-auto-complete>
+                            </div>
+                         
+                        </div>
+                        <div class="form-group m-form__group row">
+                           
+                            <label class="col-lg-3 col-form-label">
+                                Importer*:
+                            </label>
+                            <div class="col-lg-4">
+                                <div class="m-loader m-loader--primary m-loader--right" *ngIf="!usuarios_importer">
+                                    <input type="text" class="form-control"/>
+                                </div>
+                                <app-auto-complete *ngIf="usuarios_importer" placeholder="Seleccione"
+                                                    [ngModel]="importer_usuario" #importer="ngModel"
+                                                    name="importer" required [items]="usuarios_importer"
+                                                    [textField]="'numero_identidad'"
+                                                    textField1="nombre"
+                                                    textField2="apellido"
+                                                    valueField="numero_identidad"
+                                                    [isModal] = "true"
+                                ></app-auto-complete>
+                            </div>
+                            <label class="col-lg-3 col-form-label" *ngIf="articulodv.consolidado_factura">
+                                Individual/Masiva*:
+                            </label>
+                            <div class="col-lg-1" *ngIf="articulodv.consolidado_factura">
+
+                                <span class="m-switch m-switch--icon">
+                                    <label>
+                                        <input type="checkbox" checked="checked" name="tipo"
+                                            [ngModel]="masiva" #tipo="ngModel">
+                                        <span></span>
+                                    </label>
+                                </span>
+                            </div>
+                        </div>
+
+                          
+                        <div class="form-group m-form__group row">
+                            
+                            <label class="col-lg-3 col-form-label">
+                                País origen*:
+                            </label>
+                            <div class="col-lg-3">
+                                <select type="text" class="form-control m-input"
+                                [(ngModel)]="pais_origen_d_v_id" #pais_origen="ngModel" name="pais_origen" required>
+                                <option *ngFor="let pais of paises" [ngValue]="pais.id">
+                                    {{pais.nombre}}
+                                </option>
+                                </select>
+                                <section *ngIf="pais_origen.invalid && pais_origen.dirty" class="bs">
+                                    <p class="m--font-danger" *ngIf="pais_origen.hasError('required')">El pais origen es requerido</p>
+                                </section>
+                            </div>
+                            <label class="col-lg-2 col-form-label">
+                                País destino*:
+                            </label>
+                            <div class="col-lg-3">
+                                <select type="text" class="form-control m-input"
+                                [(ngModel)]="pais_destino_d_v_id" #pais_destino="ngModel" name="pais_destino" required>
+                                <option *ngFor="let pais of paises" [ngValue]="pais.id">
+                                    {{pais.nombre}}
+                                </option>
+                                </select>
+                                <section *ngIf="pais_destino.invalid && pais_destino.dirty" class="bs">
+                                    <p class="m--font-danger" *ngIf="pais_destino.hasError('required')">El pais destino es requerido</p>
+                                </section>
+                            </div>
+
+                        </div>
+
+                        <!-- Editable table -->
+                        <div class="form-group m-form__group row">  
+                            <div class="card col-lg-12">
+                                <div class="card-body">
+                                <div id="table" class="table-editable">
+                                   <span class="btn btn-info m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill" style="float: right; width: 120px; margin-bottom:10px;font-size: 1.0rem !important;" (click)="add()">
+                                        <i class="fa fa-plus" style="float: left; padding: 2.5px;"></i>
+                                        <span>
+                                            Agregar
+                                        </span>
+                                    </span> 
+                                   
+                                    <table class="table table-bordered table-responsive-md  table-responsive table-striped text-center table-description">
+                                    <tr>
+                                        <th class="text-center" style="font-size: 1.1em !important;">Descripción</th>
+                                        <th class="text-center" style="font-size: 1.1em !important;">Cantidad</th>
+                                        <th class="text-center" style="font-size: 1.1em !important;">Valor unitario</th>
+                                        <th class="text-center" style="font-size: 1.1em !important;">Valor total</th>
+                                         <th class="text-center" style="font-size: 1.1em !important;">Acciones</th> 
+                                    </tr>
+                                    <tr *ngFor="let person of paqueteList[0]; let id = index">
+                                      
+                                        <td  style="font-size: 1.1em !important;">
+                                        <span contenteditable="true" (keyup)="changeValue(id, 'descripcion', $event);" (blur)="updateList(id, 'descripcion', $event)"  style="padding:5px; text-align:center;">{{person.descripcion}}</span>
+                                        </td>
+                                        <td style="font-size: 1.1em !important;">
+                                        <span contenteditable="true" (keyup)="changeValue(id, 'cantidad', $event);" (blur)="updateList(id, 'cantidad', $event)"  style="padding:5px; text-align:center;">{{person.cantidad}}</span>
+                                        </td>
+                                        <td style="font-size: 1.1em !important;">
+                                        <span contenteditable="true" (keyup)="changeValue(id, 'vunitario', $event);" (blur)="updateList(id, 'vunitario', $event)"  style="padding:5px; text-align:center;">{{person.vunitario}}</span>
+                                        </td>
+                                        <td style="font-size: 1.1em !important;">{{(person.cantidad * person.vunitario) ? person.cantidad * person.vunitario : 0}}</td>
+                                        <td style="font-size: 1.1em !important;"> <span class="table-remove">
+                                            <i class="fa fa-trash m--font-danger" title="Eliminar" style="cursor: pointer" 
+                                            (click)="remove(id)"></i>
+                                        </span>
+                                        </td> 
+                                    </tr>  
+                                   <!--  <tr *ngFor="let person of paqueteList; let id = index">
+                                        <td>{{person.numero}}</td>
+                                        <td>{{person.descripcion}}</td>
+                                        <td>{{person.peso }}</td>
+                                        <td>
+                                            <span contenteditable="true" (keyup)="changeValue(id, 'cantidad', $event);changeValue(id, 'total', person.cantidad * person.vunitario)" (blur)="updateList(id, 'cantidad', $event);updateList(id, 'total',  person.cantidad * person.vunitario)"  style="padding:5px; text-align:center;">Ingrese Cantidad</span>
+                                            </td>
+                                        <td>{{person.vunitario}}</td>
+                                        <td>{{(person.cantidad * person.vunitario) ? person.cantidad * person.vunitario : 0}}</td>
+                                    </tr> -->
+                                    </table>
+                                </div>
+                                </div>
+                             </div>
+                        </div>
+                        <!-- Editable table -->
+                    <input type="text"  [ngModel]="paqueteList" #descripciones="ngModel"
+                    name="descripciones" style="display: none;">
+                    </div>
+                    <div class="m-portlet__foot m-portlet__no-border m-portlet__foot--fit">
+                        <div class="m-form__actions m-form__actions--solid">
+                            <div class="row">
+                                <div class="col-lg-2"></div>
+                                <div class="col-lg-10">
+                                    <button type="submit"
+                                            [disabled]="declaracionForm.invalid || totalDescripciones == 0"
+                                            [class]="(declaracionForm.invalid == false) ? 'btn btn-success' : 'btn btn-danger'"
+                                    >
+                                        Guardar
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</ng-template>
+<!--end::Modal-->
