--- a/src/app/theme/pages/default/perfil/cuenta/cuenta.component.html
+++ b/src/app/theme/pages/default/perfil/cuenta/cuenta.component.html
@@ -9,11 +9,13 @@
                 Identificación:
             </label>
             <div class="col-lg-3">
-                <input type="text" class="form-control m-input" placeholder="ID" disabled
+                <input type="text" pattern="^[a-zA-Z0-9]+$" class="form-control m-input" placeholder="ID" disabled
                        [(ngModel)]="usuario.numero_identidad" #numero_identidad="ngModel" name="numero_identidad"
                        required>
                 <section *ngIf="numero_identidad.invalid && numero_identidad.dirty" class="bs">
                     <p class="m--font-danger" *ngIf="numero_identidad.hasError('required')">El ID es requerido</p>
+                    <p class="m--font-danger" *ngIf="numero_identidad.hasError('pattern')">Introduzca una identificación válida</p>
+
                 </section>
             </div>
             <label class="col-lg-2 col-form-label">
